# fastapi

./: .env  .env.example  .gitignore  README.md  pyproject.toml
alembic/: env.py
alembic/versions/: 46bf5f63e42f_create_users_table.py  7855c7ffd234_create_users_table_updated6.py  f3e9966b3161_notice_table_updated.py
app/: main.py
app/api/routes/: auth.py  cases.py  documents.py  meetings.py  notices.py  portal.py  recordings.py  users.py
app/core/: config.py
app/core/security/: jwt.py  password.py
app/db/: base.py  session.py
app/db/models/: __init__.py  all_models.py  base_model.py  user.py
app/schemas/: auth.py  schemas.py  user.py
app/services/: auth_service.py  notice_service.py
uploads/recordings/: 84bb3a42-a7ca-4627-8675-c6df04a8f0eb.webm  aa7e1f68-9255-4f74-98fe-adc56e5828d0.webm  c30e3505-4cc3-44e7-b719-0492d9d0a278.webm
